--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="contenedor">
 			<head>				
 				<h1>
-					<img class="logo" id="logoblack" src="img/logoblack.png" alt="logo" width="450px"/>
+					<img class="logo" id="logoblack" src="img/logowhite.png" alt="logo" width="450px"/>
 					<img class="logo" id="logowhite" src="img/logowhite.png" alt="logo" width="450px"/>
 				</h1>
 			</head>
