--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 				<input type="button" value="¡Participa!" onclick="obtenerGanador()"/>
 			</head>
 			<article>
-				<div class="winner"><input type="hidden" readonly="true" id="result"/></div>
+				<div class="winner"><input type="hidden" readonly="readonly" id="result"/></div>
 				
 				<div>
 					<img class="muro" id="regalo" src="" alt="" width="240px"/>
 					<img class="muro" id="loading" src="img/loading.gif" alt="" width="150px"/>
 				</div>
 			</article>	
+		</div>s
 	</body>
 </html>
